--- a/library.properties
+++ b/library.properties
@@ -1,13 +1,13 @@
-name=SinricPro
-version=2.10.3
-author=Boris Jaeger <sivar2311@gmail.com>
-maintainer=Boris Jaeger <sivar2311@gmail.com>
-sentence=Library for https://sinric.pro - simple way to connect your device to alexa
-paragraph=Simple way to control your IOT development boards like ESP8226 or ESP32 with Amazon Alexa or Google Home
+name=HomewareIO
+version=23.02.23
+author=amarildo lacerda<amarildobatata29@gmail.com>
+maintainer=amarildo lacerda <amarildobatata29@gmail.com>
+sentence=Library for control arduino by commands
+paragraph=Simple way to control your IOT development boards like ESP8226 or ESP32 by commands
 category=Communication
-url=https://sinricpro.github.io/esp8266-esp32-sdk/index.html
+url=https://amarildolacerda.github.io/homeware/index.html
 architectures=esp8266,esp32
-repository=https://github.com/sinricpro/esp8266-esp32-sdk.git
+repository=https://github.com/amarildolacerda/homeware.git
 license=CC-BY-SA
-depends=ArduinoJson,WebSockets
-includes=SinricPro.h
+depends=ArduinoJson
+includes=homeware.h
