--- a/examples/platformio.ini
+++ b/examples/platformio.ini
@@ -16,7 +16,7 @@ monitor_speed = 115200
 board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
 framework = arduino
-build_flags = -fexceptions 
+build_flags = -fexceptions -Wno-sign-compare
 build_unflags = -fno-exceptions
 lib_deps = 
 	https://github.com/amarildolacerda/homeware.git
@@ -26,46 +26,46 @@ lib_deps =
 	lorol/LittleFS_esp32 @ ^1.0.6
 	ayushsharma82/ElegantOTA@^2.2.9
 	knolleary/PubSubClient@^2.8
-	sinricpro/SinricPro@^2.10.3
+;	sinricpro/SinricPro@^2.10.3
 	aircoookie/Espalexa@^2.7.0
 
 
-[env:esp8285]
-platform = espressif8266
-board = esp8285
-monitor_speed = 115200
-framework = arduino
-board_build.mcu = esp8266
-board_build.f_cpu = 80000000L
-build_flags = -fexceptions 
-build_unflags = -fno-exceptions
-lib_deps = 
-	https://github.com/amarildolacerda/homeware.git
-	https://github.com/amarildolacerda/WiFiManager.git
-	bblanchon/ArduinoJson@^6.20.1
-	lennarthennigs/ESP Telnet @ ^2.0.0
-	lorol/LittleFS_esp32 @ ^1.0.6
-	ayushsharma82/ElegantOTA@^2.2.9
-	knolleary/PubSubClient@^2.8
-	sinricpro/SinricPro@^2.10.3
-	aircoookie/Espalexa@^2.7.0
+;[env:esp8285]
+;platform = espressif8266
+;board = esp8285
+;monitor_speed = 115200
+;framework = arduino
+;board_build.mcu = esp8266
+;board_build.f_cpu = 80000000L
+;build_flags = -fexceptions 
+;build_unflags = -fno-exceptions
+;lib_deps = 
+;	https://github.com/amarildolacerda/homeware.git
+;	https://github.com/amarildolacerda/WiFiManager.git
+;	bblanchon/ArduinoJson@^6.20.1
+;	lennarthennigs/ESP Telnet @ ^2.0.0
+;	lorol/LittleFS_esp32 @ ^1.0.6
+;	ayushsharma82/ElegantOTA@^2.2.9
+;	knolleary/PubSubClient@^2.8
+;	sinricpro/SinricPro@^2.10.3
+;	aircoookie/Espalexa@^2.7.0
 
-[env:sonoff_basic]
-platform = espressif8266
-board = sonoff_basic
-monitor_speed = 115200
-framework = arduino
-board_build.mcu = esp8266
-board_build.f_cpu = 80000000L
-build_flags = -fexceptions 
-build_unflags = -fno-exceptions
-lib_deps = 
-	https://github.com/amarildolacerda/homeware.git
-	https://github.com/amarildolacerda/WiFiManager.git
-	bblanchon/ArduinoJson@^6.20.1
-	lennarthennigs/ESP Telnet @ ^2.0.0
-	lorol/LittleFS_esp32 @ ^1.0.6
-	ayushsharma82/ElegantOTA@^2.2.9
-	knolleary/PubSubClient@^2.8
-	sinricpro/SinricPro@^2.10.3
-	aircoookie/Espalexa@^2.7.0
+;[env:sonoff_basic]
+;platform = espressif8266
+;board = sonoff_basic
+;monitor_speed = 115200
+;framework = arduino
+;board_build.mcu = esp8266
+;board_build.f_cpu = 80000000L
+;build_flags = -fexceptions 
+;build_unflags = -fno-exceptions
+;lib_deps = 
+;	https://github.com/amarildolacerda/homeware.git
+;	https://github.com/amarildolacerda/WiFiManager.git
+;	bblanchon/ArduinoJson@^6.20.1
+;	lennarthennigs/ESP Telnet @ ^2.0.0
+;	lorol/LittleFS_esp32 @ ^1.0.6
+;	ayushsharma82/ElegantOTA@^2.2.9
+;	knolleary/PubSubClient@^2.8
+;	sinricpro/SinricPro@^2.10.3
+;	aircoookie/Espalexa@^2.7.0
