--- a/examples/platformio.ini
+++ b/examples/platformio.ini
@@ -28,6 +28,8 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 ;	sinricpro/SinricPro@^2.10.3
 	aircoookie/Espalexa@^2.7.0
+    arduino-libraries/NTPClient
+	
 
 
 ;[env:esp8285]
