--- a/examples/platformio.ini
+++ b/examples/platformio.ini
@@ -8,6 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[common]
+build_flags =
+    -D VERSION=25.04.23
+    -D DEBUG=0
+
+[env]
 
 [env:d1]
 platform = espressif8266
@@ -16,7 +22,11 @@ monitor_speed = 115200
 board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
 framework = arduino
-build_flags = -fexceptions -Wno-sign-compare
+build_flags = 
+    -fexceptions 
+	-Wno-sign-compare
+	-D WEMO_D1=""
+
 build_unflags = -fno-exceptions
 lib_deps = 
 	https://github.com/amarildolacerda/homeware.git
